--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
 
         </activity>
 
+        <activity android:name=".Flashcard" android:parentActivityName=".MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
